services heros done

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 <div class="col-lg-4 col-sm-12 d-flex border-bottom border-secondary py-3 ">
                     <a href="products/digital-mobile.html.html" class="d-flex w-100">
                         <div class="home-service-icon-container">
-                            <img clas="home-service-icon" src="./assets/images/services icons/Digital Solutions/To Be Added.png" alt="">
+                            <img clas="home-service-icon" src="./assets/images/services icons/Digital Solutions/Mobile app.png" alt="">
                         </div>
                         <h6 class="pl-3 my-auto text-dark">mobile App Development</h6>
                     </a>
