--- a/products/digital.html
+++ b/products/digital.html
@@ -149,7 +149,7 @@
     <div class=" consulting-page container-fluid">
         <div class="header row bg-dark">
             <div class="img px-0 col-lg-5">
-                <img src="../assets/images/heros/new/consulting.png" alt="">
+                <img src="../assets/images/heros/Digitsl Solutions (1).png" alt="">
             </div>
 
             <div class="col-lg-7 text d-flex align-items-end mb-3">
@@ -177,7 +177,9 @@
                 <!-- Enterprise Content Management (ECM) -->
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
-                        <img class="" src="../assets/images/services icons/Digital Solutions/Elcectronic Content .png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/Digital Solutions/Elcectronic Content .png" alt="">
+                        </div>
                         <h5 class="text-dark pl-3 my-auto">Enterprise Content Management (ECM)</h5>
                     </div>
 
@@ -194,7 +196,9 @@
                 <!-- Enterprise Resource Planning (ERP)  -->
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
-                        <img src="../assets/images/services icons/Digital Solutions/Enterprise Resource.png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/Digital Solutions/Enterprise Resource.png" alt="">
+                        </div>
                         <h5 class="text-dark pl-3 my-auto">Enterprise Resource Planning (ERP)  </h5>
                     </div>
 
@@ -212,7 +216,9 @@
                 <!-- Payroll  -->
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
-                        <img src="../assets/images/services icons/Digital Solutions/Payroll.png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/Digital Solutions/Payroll.png" alt="">
+                        </div>
                         <h5 class="text-dark pl-3 my-auto">Payroll  </h5>
                     </div>
 
@@ -229,7 +235,9 @@
                 <!-- Project Portfolio Management (PPM) -->
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
-                        <img src="../assets/images/services icons/Digital Solutions/Project Portfolio.png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/Digital Solutions/Project Portfolio.png" alt="">
+                        </div>
                         <h5 class="text-dark pl-3 my-auto">Project Portfolio Management (PPM) </h5>
                     </div>
 
@@ -245,7 +253,9 @@
                 <!-- Customer Relationship Management -->
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
-                        <img src="../assets/images/services icons/Digital Solutions/Customer Relationship.png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/Digital Solutions/Customer Relationship.png" alt="">
+                        </div>
                         <h5 class="text-dark pl-3 my-auto"> Customer Relationship Management</h5>
                     </div>
 
@@ -261,7 +271,9 @@
                 <!-- Real Estate Management System -->
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
-                        <img src="../assets/images/services icons/Digital Solutions/Real Estate.png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/Digital Solutions/Real Estate.png" alt="">
+                        </div>
                         <h5 class="text-dark pl-3 my-auto">Real Estate Management System </h5>
                     </div>
 
@@ -277,7 +289,9 @@
                 <!-- Procurement -->
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
-                        <img src="../assets/images/services icons/Digital Solutions/Procurement.png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/Digital Solutions/Procurement.png" alt="">
+                        </div>
                         <h5 class="text-dark pl-3 my-auto">Procurement </h5>
                     </div>
 
@@ -293,7 +307,9 @@
                 <!-- Custom Development -->
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
-                        <img src="../assets/images/services icons/Digital Solutions/Real Estate.png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/Digital Solutions/Real Estate.png" alt="">
+                        </div>
                         <h5 class="text-dark pl-3 my-auto">Custom Development </h5>
                     </div>
 
@@ -310,7 +326,9 @@
                 <!-- Mobile App Development -->
                 <div class="service">
                     <div class="d-flex my-3" >
-                        <img src="../assets/images/services icons/Digital Solutions/Real Estate.png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/Digital Solutions/Real Estate.png" alt="">
+                        </div>
                         <h5 class="text-dark pl-3 my-auto">Mobile App Development </h5>
                     </div>
 
