--- a/products/index.html
+++ b/products/index.html
@@ -280,7 +280,7 @@
                     <div class="service col-lg-4 mt-3 mb-4 ">
                         <div class="d-flex ">
                             <div class="home-service-icon-container">
-                                <img class="home-service-icon" src="../assets/images/services icons/Digital Solutions/To Be Added.png" alt="">
+                                <img class="home-service-icon" src="../assets/images/services icons/Digital Solutions/Mobile app.png" alt="">
                             </div>
                             <h6 class="my-auto pl-3 text-dark text-left">Mobile App Development</h6>
                         </div>
@@ -290,7 +290,7 @@
                             including seamless integration
                         </p>
 
-                        <a href="./digital-mobile.html.html">Read More</a>
+                        <a href="./digital-mobile.html">Read More</a>
                     </div>
 
                     
