--- a/products/consulting.html
+++ b/products/consulting.html
@@ -148,7 +148,7 @@
     <div class=" consulting-page container-fluid">
         <div class="header row bg-dark">
             <div class="img px-0 col-lg-5">
-                <img src="../assets/images/heros/new/consulting.png" alt="">
+                <img src="../assets/images/heros/IT Advisory.png" alt="">
             </div>
 
             <div class="col-lg-7 text d-flex align-items-end mb-3">
@@ -176,7 +176,9 @@
                 <!-- Governance, Risk & Compliance -->
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
-                        <img class="" src="../assets/images/services icons/IT Advisory _ Consulting/Gorvenance .png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/IT Advisory _ Consulting/Gorvenance .png" alt="">
+                        </div>
                         <h4 class="text-dark pl-3 my-auto">Governance, Risk & Compliance</h4>
                     </div>
 
@@ -192,7 +194,9 @@
                 <!-- Big Data & Analytics -->
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
-                        <img src="../assets/images/services icons/IT Advisory _ Consulting/Big Data.png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/IT Advisory _ Consulting/Big Data.png" alt="">
+                        </div>
                         <h4 class="text-dark pl-3 my-auto">Big Data & Analytics </h4>
                     </div>
 
@@ -208,7 +212,9 @@
                 <!-- Strategy -->
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
-                        <img src="../assets/images/services icons/IT Advisory _ Consulting/Strategy.png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/IT Advisory _ Consulting/Strategy.png" alt="">
+                        </div>
                         <h4 class="text-dark pl-3 my-auto">Strategy </h4>
                     </div>
 
@@ -224,7 +230,9 @@
                 <!-- Program Management -->
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
-                        <img src="../assets/images/services icons/IT Advisory _ Consulting/Program Management.png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/IT Advisory _ Consulting/Program Management.png" alt="">
+                        </div>
                         <h4 class="text-dark pl-3 my-auto">Program Management </h4>
                     </div>
 
@@ -240,7 +248,9 @@
                 <!-- Internet Of Things -->
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
-                        <img src="../assets/images/services icons/IT Advisory _ Consulting/IoT.png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/IT Advisory _ Consulting/IoT.png" alt="">
+                        </div>
                         <h4 class="text-dark pl-3 my-auto"> Internet Of Things</h4>
                     </div>
 
@@ -256,7 +266,9 @@
                 <!-- Artificial Intelligence -->
                 <div class="service border-bottom border-secondary">
                     <div class="d-flex my-3" >
-                        <img src="../assets/images/services icons/IT Advisory _ Consulting/Artificial Intelligence .png" alt="">
+                        <div class="home-service-icon-container">
+                            <img class="home-service-icon" src="../assets/images/services icons/IT Advisory _ Consulting/Artificial Intelligence .png" alt="">
+                        </div>
                         <h4 class="text-dark pl-3 my-auto">Artificial Intelligence </h4>
                     </div>
 
