arrows after service

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                         <div class="home-service-icon-container">
                             <img clas="home-service-icon" src="./assets/images/services icons/Digital Solutions/Mobile app.png" alt="">
                         </div>
-                        <h6 class="pl-3 my-auto text-dark">mobile App Development</h6>
+                        <h6 class="pl-3 my-auto text-dark">Mobile App Development</h6>
                     </a>
                 </div>
 
