--- a/products/cloud_services.html
+++ b/products/cloud_services.html
@@ -178,14 +178,14 @@
                         <div class="home-service-icon-container">
                             <img clas="home-service-icon" src="../assets/images/services icons/Cloud Services/Platform aas.png" alt="">
                         </div>
-                        <h4 class="text-dark pl-3 my-auto">Platform as a Service (PaaS)</h4>
+                        <h5 class="text-dark pl-3 my-auto">Platform as a Service (PaaS)</h5>
                     </div>
 
                     <p>
                         Quality Designs provide a platform for building software delivered over the web.
                     </p>
 
-                    <div class="text-right mr-3">
+                    <div class="text-right mr-3 pb-3">
                         <a href="./cloud-paas.html" class="text-right">Read More</a>
                     </div>
                 </div>
@@ -196,32 +196,32 @@
                         <div class="home-service-icon-container">
                             <img clas="home-service-icon" src="../assets/images/services icons/Cloud Services/Infrastructure aas.png" alt="">
                         </div>
-                        <h4 class="text-dark pl-3 my-auto">Infrastructure as a Service (IaaS) </h4>
+                        <h5 class="text-dark pl-3 my-auto">Infrastructure as a Service (IaaS) </h5>
                     </div>
 
                     <p>
                         Quality Designs delivery model for cloud services where customers purchase access to managed IT infrastructure over the internet. 
                     </p>
 
-                    <div class="text-right mr-3">
+                    <div class="text-right mr-3 pb-3">
                         <a href="./cloud-iaas.html" class="text-right">Read More</a>
                     </div>
                 </div>
 
                 <!-- Software as a Service (SaaS) -->
-                <div class="service border-bottom border-secondary">
+                <div class="service">
                     <div class="d-flex my-3" >
                         <div class="home-service-icon-container">
                             <img clas="home-service-icon" src="../assets/images/services icons/Cloud Services/Software aas.png" alt="">
                         </div>
-                        <h4 class="text-dark pl-3 my-auto">Software as a Service (SaaS) </h4>
+                        <h5 class="text-dark pl-3 my-auto">Software as a Service (SaaS) </h5>
                     </div>
 
                     <p>
                         Quality Designs delivers a number of solutions through a SaaS model to help you unlock the value of your investments.
                     </p>
 
-                    <div class="text-right mr-3">
+                    <div class="text-right mr-3 pb-3">
                         <a href="./cloud-saas.html" class="text-right">Read More</a>
                     </div>
                 </div>
@@ -242,10 +242,10 @@
     <!-- strip -->
 
     <!-- grey strip -->
-    <div class="services-strip industry-strip bg-dark text-white text-center py-4">
-        <h3>SPEAK TO AN EXPERT</h3>
+    <div class="industry-strip text-white text-center py-4">
+        <h4>SPEAK TO AN EXPERT</h4>
         <P>We'll need just a few details from you and one of our specialists will be in touch</P>
-        <a class="btn btn-primary " href="../contact-us.html#contact-form">GET IN TOUCH</a>
+        <a class="btn btn-primary bg-red  px-3 py-1 " style="border: unset"  href="./contact-us.html#contact-form">GET IN TOUCH</a>
     </div>
     <!-- grey strip -->
     <!-- Footer Start -->
