it advisory heros

--- a/products/consulting-bigdata.html
+++ b/products/consulting-bigdata.html
@@ -145,7 +145,7 @@
     <!-- Header End -->
 
     <!-- Hero Start -->
-    <section class="hero iot-hero hero-xsm">
+    <section class="hero left-title-hero bigdata-hero hero-xsm">
         <div class="container">
             <div class="row">
                 <!-- swiper / slider -->
