--- a/products/consulting-governance.html
+++ b/products/consulting-governance.html
@@ -145,7 +145,7 @@
     </header>
     <!-- Header End -->
     <!-- Hero Start -->
-    <section class="hero iot-hero hero-xsm">
+    <section class="hero left-title-hero governance-hero hero-xsm">
         <div class="container">
             <div class="row">
                 <!-- swiper / slider -->
