--- a/products/consulting-strategy.html
+++ b/products/consulting-strategy.html
@@ -146,7 +146,7 @@
     <!-- Header End -->
 
     <!-- Hero Start -->
-    <section class="hero iot-hero hero-xsm">
+    <section class="hero left-title-hero strategy-hero hero-xsm">
         <div class="container">
             <div class="row">
                 <!-- swiper / slider -->
