--- a/products/digital-realestate.html
+++ b/products/digital-realestate.html
@@ -146,7 +146,7 @@
     <!-- Header End -->
 
     <!-- Hero Start -->
-    <section class="hero iot-hero hero-sm">
+    <section class="hero left-title-hero iot-hero hero-sm">
         <div class="container">
             <div class="row">
                 <!-- swiper / slider -->
