--- a/products/cloud-iaas.html
+++ b/products/cloud-iaas.html
@@ -145,7 +145,7 @@
     <!-- Header End -->
 
     <!-- Hero Start -->
-    <section class="hero left-title-hero iot-hero hero-xsm">
+    <section class="hero left-title-hero iaas-hero hero-xsm">
         <div class="container">
             <div class="row">
                 <!-- swiper / slider -->
