--- a/products/index.html
+++ b/products/index.html
@@ -467,7 +467,7 @@
 
             <!-- consulting  -->
             <div class="consulting py-4 container text-center">
-                <h4 class="title text-primary"><a href="./consulting.html">Consulting</a></h4>
+                <h4 class="title text-primary"><a href="./consulting.html">IT Advisory / Consulting</a></h4>
                 <p>
                     Effectively manage IT governance and risk while also ensuring business and regulatory compliance. <br>
                     Quality Designs helps organisations analyze, audit and manage their governance, risk and compliance
