--- a/index.html
+++ b/index.html
@@ -205,6 +205,24 @@
                                 </div>
                             </div>
                             <!-- swiper / slide element end -->
+                            <!-- swiper / slide element start -->
+                            <div class="swiper-slide home-hero-swiper-slide slide-content d-flex align-items-center">
+                                <div class="single-slide">
+                                    <!-- short text heading -->
+                                    <h1 class="mt-0" data-aos="fade-right" data-aos-delay="200">Digital Strategy
+                                    </h1>
+
+                                    <!-- brief text -->
+                                    <p data-aos="fade-right" data-aos-delay="600">
+                                        We create a successful Digital Transformation strategy.
+                                    </p>
+
+                                    <!-- call to action buttons -->
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 1</a> -->
+                                    <!-- <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">Call to action 2</a> -->
+                                </div>
+                            </div>
+                            <!-- swiper / slide element end -->
 
                             <!-- <div class="swiper-slide home-hero-swiper-slide slide-content d-flex align-items-center">
                                 <div class="single-slide">
