--- a/industries.html
+++ b/industries.html
@@ -212,42 +212,46 @@
                     <div class="icon-container mb-3" >
                         <img class="icon" src="./assets/images/INDUSTRIES/financial services .png" alt="">
                     </div> 
-                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit soluta excepturi dolores nihil.</p>
+                        <p>
+                            Quality Designs financial services industry thrive to provide comprehensive,
+                            integrated solutions to the banking, insurance, and investment management
+                            services.
+                        </p>
                     <a href="#"  data-toggle="modal" data-target="#banking-modal">Read More </a>    
                 </div>
 
                 <div class="modal fade" id="banking-modal" tabindex="-1" role="dialog" aria-labelledby="banking-modal" aria-hidden="true">
                     <div class="modal-dialog modal-lg" role="document">
                         <div class="modal-content">
-                          <div class="modal-header">
-                            <h4 class="modal-title text-dark" id="exampleModalLabel">Financial Services</h4>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                              <span aria-hidden="true">&times;</span>
-                            </button>
-                          </div>
-                          <div class="modal-body">
-                             <div>
-                                 <p>
-                                    We automate to innovate in financial services and deliver enterprise-scale
-                                    solutions. Quality Designs provide an exceptional experiences for your clients to
-                                    drive growth and retention. Rapid technological change is already impacting the
-                                    Financial Services industry. Data security and improving the customer
-                                    experience are now a top priority for banks, wealth management, and insurance
-                                    providers.
-                                 </p>
+                            <div class="modal-header">
+                                <h4 class="modal-title text-dark" id="exampleModalLabel">Financial Services</h4>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <div>
+                                    <p>
+                                        We automate to innovate in financial services and deliver enterprise-scale
+                                        solutions. Quality Designs provide an exceptional experiences for your clients to
+                                        drive growth and retention. Rapid technological change is already impacting the
+                                        Financial Services industry. Data security and improving the customer
+                                        experience are now a top priority for banks, wealth management, and insurance
+                                        providers.
+                                    </p>
 
-                                 <h6 class="pt-3">How we can help</h6>
-                                 <ul>
-                                     <li>Accelerate innovation and time to market</li>
-                                     <li>Provide superior customer experiences</li>
-                                     <li>Mitigate risk and protect data privacy</li>
-                                     <li>Dramatically reduce cost and time</li>
-                                 </ul>
-                             </div>
-                          </div>
-                          <div class="modal-footer">
-                            <button type="button" class="btn btn-primary btn-sm square-btn" data-dismiss="modal">Close</button>
-                          </div>
+                                    <h6 class="pt-3">How we can help</h6>
+                                    <ul>
+                                        <li>Accelerate innovation and time to market</li>
+                                        <li>Provide superior customer experiences</li>
+                                        <li>Mitigate risk and protect data privacy</li>
+                                        <li>Dramatically reduce cost and time</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary btn-sm square-btn" data-dismiss="modal">Close</button>
+                            </div>
                         </div>
                       </div>
                 </div>
@@ -268,7 +272,11 @@
                     <div class="icon-container mb-3" >
                         <img class="icon" src="./assets/images/INDUSTRIES/retail & customers.png"  alt="">
                     </div> 
-                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit soluta excepturi dolores nihil.</p>
+                        <p>
+                            Quality Designs Retail and Consumer work with clients throughout the retail
+                            value chain, create innovative products and deliver experiences that keep
+                            consumers happy
+                        </p>
                     <a href="#"   data-toggle="modal" data-target="#retail-modal">Read More</a>    
                 </div>
 
@@ -320,7 +328,11 @@
                     <div class="icon-container mb-3" >
                         <img class="icon" src="./assets/images/INDUSTRIES/manufacturing.png"  alt="">
                     </div> 
-                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit soluta excepturi dolores nihil.</p>
+                        <p>
+                            Quality Designs fourth Industrial technologies offer the opportunity to design
+                            innovative products faster, improve efficiencies and develop digital solutions for
+                            manufacturing
+                        </p>
                     <a href="#"   data-toggle="modal" data-target="#manufacturing-modal">Read More</a>    
                 </div>
 
@@ -378,7 +390,10 @@
                     <div class="icon-container mb-3" >
                         <img class="icon" src="./assets/images/INDUSTRIES/government sector.png"  alt="">
                     </div> 
-                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit soluta excepturi dolores nihil.</p>
+                    <p>
+                        Quality Designs can help you use digital technologies to meet the needs of
+                        citizens who want consumer-like experiences from public sector.
+                    </p>
                     <a href="#"   data-toggle="modal" data-target="#public-modal">Read More</a>    
                 </div>
 
@@ -433,7 +448,11 @@
                     <div class="icon-container mb-3" >
                         <img class="icon" src="./assets/images/INDUSTRIES/healthcare.png"  alt="">
                     </div> 
-                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit soluta excepturi dolores nihil.</p>
+                        <p>
+                            Quality Designs find new ways to connect with your patients. We helps clients
+                            respond to the complexities of today and find new ways to connect with your
+                            patients
+                        </p>
                     <a href="#"   data-toggle="modal" data-target="#healthcare-modal">Read More</a>    
                 </div>
 
@@ -489,7 +508,10 @@
                     <div class="icon-container mb-3" >
                         <img class="icon" src="./assets/images/INDUSTRIES/education.png"  alt="">
                     </div> 
-                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit soluta excepturi dolores nihil.</p>
+                        <p>
+                            Quality Designs mission is to advance students and educators across the world.
+                            We work your institutions across all levels of education to craft better future.
+                        </p>
                     <a href="#"   data-toggle="modal" data-target="#education-modal">Read More</a>    
                 </div>
 
@@ -545,7 +567,11 @@
                     <div class="icon-container mb-3" >
                         <img class="icon" src="./assets/images/INDUSTRIES/Transportation.png"  alt="">
                     </div> 
-                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit soluta excepturi dolores nihil.</p>
+                        <p>
+                            Quality Designs transportation provide a strategic guidance for transportation
+                            and leveraging new technologies to modernize aging infrastructure and
+                            outdated processes
+                        </p>
                     <a href="#"   data-toggle="modal" data-target="#transportation-modal">Read More</a>    
                 </div>
 
@@ -611,26 +637,51 @@
                      <div class="icon-container mb-3">
                          <img class="icon" src="./assets/images/INDUSTRIES/media .png"  alt="">
                      </div>
-                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum odit soluta excepturi dolores nihil.</p>
-                    <a href="#"   data-toggle="modal" data-target="#media-modal">Read More</a>    
+                     <p>
+                        Quality Designs telecommunications help customers transform business, gain
+                        remarkable growth of connectivity and quickly launch new business Solutions.
+                     </p>
+                     <a href="#"   data-toggle="modal" data-target="#media-modal">Read More</a>    
                 </div>
 
 
                 <div class="modal fade" id="media-modal" tabindex="-1" role="dialog" aria-labelledby="media-modal" aria-hidden="true">
                     <div class="modal-dialog modal-lg" role="document">
                         <div class="modal-content">
-                          <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Media</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                              <span aria-hidden="true">&times;</span>
-                            </button>
-                          </div>
-                          <div class="modal-body">
-                            Media Modal
-                          </div>
-                          <div class="modal-footer">
-                            <button type="button" class="btn btn-primary btn-sm square-btn" data-dismiss="modal">Close</button>
-                          </div>
+                            <div class="modal-header">
+                                <h4 class="modal-title" id="exampleModalLabel">Media</h4>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <div>
+                                    <p>
+                                        Quality Designs offers products and solutions across an all levels of the
+                                        organization. All these products and solutions rely on a solid connectivity
+                                        infrastructure as content, distribution and streaming video services converge.
+                                        We partner with leaders in the telecoms industry that can provide all the links
+                                        you need to connect all aspects of your business. With a focus on digital
+                                        transformation, we help telecom companies incubate new business models that
+                                        leverage technologies such as 5G, IoT and blockchain. Quality Designs uses agile
+                                        methodologies to help customers speed the development of new products and
+                                        engage in product rationalization to better align with network and strategy. Our
+                                        strategic partnership with telecoms industry gives us unparalleled access to
+                                        technology and expertise that can deliver innovative solutions.
+                                    </p>
+
+                                    <h6 class="pt-3">How we can help</h6>
+                                    <ul>
+                                        <li> the customer experience </li>
+                                        <li>Implement software-defined networks </li>
+                                        <li>Adopt new communications platforms </li>
+                                        <li>Implement managed security services </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-primary btn-sm square-btn" data-dismiss="modal">Close</button>
+                            </div>
                         </div>
                       </div>
                 </div>
@@ -651,7 +702,7 @@
 
     <!-- grey strip -->
     <div class="industry-strip text-white text-center py-4">
-        <h4>SPEAK TO AN EXPERT</h4>
+        <h4 class="text-primary">SPEAK TO AN EXPERT</h4>
         <P>We'll need just a few details from you and one of our specialists will be in touch</P>
         <a class="btn btn-primary bg-red  px-3 py-1 " style="border: unset"  href="./contact-us.html#contact-form">GET IN TOUCH</a>
     </div>
