--- a/products/digital.html
+++ b/products/digital.html
@@ -327,7 +327,7 @@
                 <div class="service">
                     <div class="d-flex my-3" >
                         <div class="home-service-icon-container">
-                            <img class="home-service-icon" src="../assets/images/services icons/Digital Solutions/Real Estate.png" alt="">
+                            <img class="home-service-icon" src="../assets/images/services icons/Digital Solutions/Mobile app.png" alt="">
                         </div>
                         <h5 class="text-dark pl-3 my-auto">Mobile App Development </h5>
                     </div>
@@ -360,9 +360,9 @@
 
     <!-- grey strip -->
     <div class="industry-strip text-white text-center py-4">
-        <h4>SPEAK TO AN EXPERT</h4>
+        <h4 class="text-primary">SPEAK TO AN EXPERT</h4>
         <P>We'll need just a few details from you and one of our specialists will be in touch</P>
-        <a class="btn btn-primary bg-red  px-3 py-1 " style="border: unset"  href="./contact-us.html#contact-form">GET IN TOUCH</a>
+        <a class="btn btn-primary bg-red  px-3 py-1 " style="border: unset"  href="../contact-us.html#contact-form">GET IN TOUCH</a>
     </div>
     <!-- grey strip -->
     <!-- Footer Start -->
