--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                                     <a  class="dropdown-item text-primary" tabindex="-1" href="./products/cloud_services.html">Cloud Services</a>
                                     <!-- cloud services dropdown items -->
                                     <ul class="dropdown-menu">
-                                        <a class="dropdown-item text-primary" href="./products/cloud-saas.html">Software As A Sercvice</a>
-                                        <a class="dropdown-item text-primary" href="./products/cloud-paas.html">Platform As A Sercvice</a>
-                                        <a class="dropdown-item text-primary" href="./products/cloud-iaas.html">Infrastructure As A Sercvice</a>
+                                        <a class="dropdown-item text-primary" href="./products/cloud-saas.html">Software As A Service</a>
+                                        <a class="dropdown-item text-primary" href="./products/cloud-paas.html">Platform As A Service</a>
+                                        <a class="dropdown-item text-primary" href="./products/cloud-iaas.html">Infrastructure As A Service</a>
                                     </ul>
                                 </li>
 
