--- a/products/digital-mobile.html
+++ b/products/digital-mobile.html
@@ -106,9 +106,9 @@
                                     <a  class="dropdown-item text-primary" tabindex="-1" href="./cloud_services.html">Cloud Services</a>
                                     <!-- cloud services dropdown items -->
                                     <ul class="dropdown-menu">
-                                        <a class="dropdown-item text-primary" href="./cloud-saas.html">Software As A Sercvice</a>
-                                        <a class="dropdown-item text-primary" href="./cloud-paas.html">Platform As A Sercvice</a>
-                                        <a class="dropdown-item text-primary" href="./cloud-iaas.html">Infrastructure As A Sercvice</a>
+                                        <a class="dropdown-item text-primary" href="./cloud-saas.html">Software As A Service</a>
+                                        <a class="dropdown-item text-primary" href="./cloud-paas.html">Platform As A Service</a>
+                                        <a class="dropdown-item text-primary" href="./cloud-iaas.html">Infrastructure As A Service</a>
                                     </ul>
                                 </li>
 
