--- a/products/consulting-bigdata.html
+++ b/products/consulting-bigdata.html
@@ -89,7 +89,7 @@
                                             <a class="dropdown-item text-primary" href="./digital-erp.html">Enterprise Resource Planning</a>
                                             <a class="dropdown-item text-primary" href="./digital-payroll.html">Payroll</a>
                                             <a class="dropdown-item text-primary" href="./digital-ppm.html">Project Portfolio Management</a>
-                                            <a class="dropdown-item text-primary" href="./digital-crm.html">Customer Relattionship Management</a>
+                                            <a class="dropdown-item text-primary" href="./digital-crm.html">Customer Relationship Management</a>
                                             <a class="dropdown-item text-primary" href="./digital-realestate.html">Real Estate Management</a>
                                             <a class="dropdown-item text-primary" href="./digital-procurement.html">Procurement</a>
                                             <a class="dropdown-item text-primary" href="./digital-customdev.html">Custom Development</a>
@@ -120,7 +120,7 @@
                                         <li class="dropdown-submenu">
                                             <a class="dropdown-item text-primary" href="./consulting-governance.html">Governance, Risk & Compliance</a>
                                             <a class="dropdown-item text-primary" href="./consulting-strategy.html">Strategy</a>
-                                            <a class="dropdown-item text-primary" href="./consulting-iot.html">Internet of Things Consulting</a>
+                                            <a class="dropdown-item text-primary" href="./consulting-iot.html">Internet of Things</a>
                                             <a class="dropdown-item text-primary" href="./consulting-bigdata.html">Big Data & Analytics</a>
                                             <a class="dropdown-item text-primary" href="./consulting-program.html">Program Management</a>
                                             <a class="dropdown-item text-primary" href="./consulting-ai.html">Artificial Intelligence</a>
