--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                                             <a class="dropdown-item text-primary" href="./products/digital-erp.html">Enterprise Resource Planning</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-payroll.html">Payroll</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-ppm.html">Project Portfolio Management</a>
-                                            <a class="dropdown-item text-primary" href="./products/digital-crm.html">Customer Relattionship Management</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital-crm.html">Customer Relationship Management</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-realestate.html">Real Estate Management</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-procurement.html">Procurement</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-customdev.html">Custom Development</a>
@@ -125,7 +125,7 @@
                                         <li class="dropdown-submenu">
                                             <a class="dropdown-item text-primary" href="./products/consulting-governance.html">Governance, Risk & Compliance</a>
                                             <a class="dropdown-item text-primary" href="./products/consulting-strategy.html">Strategy</a>
-                                            <a class="dropdown-item text-primary" href="./products/consulting-iot.html">Internet of Things Consulting</a>
+                                            <a class="dropdown-item text-primary" href="./products/consulting-iot.html">Internet of Things</a>
                                             <a class="dropdown-item text-primary" href="./products/consulting-bigdata.html">Big Data & Analytics</a>
                                             <a class="dropdown-item text-primary" href="./products/consulting-program.html">Program Management</a>
                                             <a class="dropdown-item text-primary" href="./products/consulting-ai.html">Artificial Intelligence</a>
