--- a/industries.html
+++ b/industries.html
@@ -89,7 +89,7 @@
                                             <a class="dropdown-item text-primary" href="./products/digital-erp.html">Enterprise Resource Planning</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-payroll.html">Payroll</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-ppm.html">Project Portfolio Management</a>
-                                            <a class="dropdown-item text-primary" href="./products/digital-crm.html">Customer Relattionship Management</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital-crm.html">Customer Relationship Management</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-realestate.html">Real Estate Management</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-procurement.html">Procurement</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-customdev.html">Custom Development</a>
@@ -120,7 +120,7 @@
                                         <li class="dropdown-submenu">
                                             <a class="dropdown-item text-primary" href="./products/consulting-governance.html">Governance, Risk & Compliance</a>
                                             <a class="dropdown-item text-primary" href="./products/consulting-strategy.html">Strategy</a>
-                                            <a class="dropdown-item text-primary" href="./products/consulting-iot.html">Internet of Things Consulting</a>
+                                            <a class="dropdown-item text-primary" href="./products/consulting-iot.html">Internet of Things</a>
                                             <a class="dropdown-item text-primary" href="./products/consulting-bigdata.html">Big Data & Analytics</a>
                                             <a class="dropdown-item text-primary" href="./products/consulting-program.html">Program Management</a>
                                             <a class="dropdown-item text-primary" href="./products/consulting-ai.html">Artificial Intelligence</a>
@@ -258,7 +258,7 @@
 
             </div>
 
-            <!-- Retail And Consuters -->
+            <!-- Retail And Consumers -->
             <div id="retail" class="industry my-3 col-lg-6 row">
                 <div class="title text-dark col-12">
                     <h4>Retail and Consumers</h4>
@@ -273,9 +273,8 @@
                         <img class="icon" src="./assets/images/INDUSTRIES/retail & customers.png"  alt="">
                     </div> 
                         <p>
-                            Quality Designs Retail and Consumer work with clients throughout the retail
-                            value chain, create innovative products and deliver experiences that keep
-                            consumers happy
+                            Quality Designs works with clients throughout the retail value chain, create
+                            innovative products and deliver experiences that keep consumers happy
                         </p>
                     <a href="#"   data-toggle="modal" data-target="#retail-modal">Read More</a>    
                 </div>
@@ -329,9 +328,8 @@
                         <img class="icon" src="./assets/images/INDUSTRIES/manufacturing.png"  alt="">
                     </div> 
                         <p>
-                            Quality Designs fourth Industrial technologies offer the opportunity to design
-                            innovative products faster, improve efficiencies and develop digital solutions for
-                            manufacturing
+                            Quality Designs technologies offer the opportunity to design innovative products
+                            faster, improve efficiencies and develop digital solutions for manufacturing
                         </p>
                     <a href="#"   data-toggle="modal" data-target="#manufacturing-modal">Read More</a>    
                 </div>
@@ -568,9 +566,8 @@
                         <img class="icon" src="./assets/images/INDUSTRIES/Transportation.png"  alt="">
                     </div> 
                         <p>
-                            Quality Designs transportation provide a strategic guidance for transportation
-                            and leveraging new technologies to modernize aging infrastructure and
-                            outdated processes
+                            Quality Designs provide a strategic guidance for transportation and leveraging
+                            new technologies to modernize aging infrastructure and outdated processes
                         </p>
                     <a href="#"   data-toggle="modal" data-target="#transportation-modal">Read More</a>    
                 </div>
@@ -626,7 +623,7 @@
             <!-- Media -->
             <div id="media" class="industry my-3 col-lg-6 row">
                 <div class="title text-dark col-12">
-                    <h4>Media</h4>
+                    <h4>Telecommunications</h4>
                 </div>
 
                  <div class="industry-img pl-3 col-lg-4 ">
@@ -649,7 +646,7 @@
                     <div class="modal-dialog modal-lg" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h4 class="modal-title" id="exampleModalLabel">Media</h4>
+                                <h4 class="modal-title" id="exampleModalLabel">Telecommunications</h4>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                                 </button>
