--- a/vecancies.html
+++ b/vecancies.html
@@ -89,7 +89,7 @@
                                             <a class="dropdown-item text-primary" href="./products/digital-erp.html">Enterprise Resource Planning</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-payroll.html">Payroll</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-ppm.html">Project Portfolio Management</a>
-                                            <a class="dropdown-item text-primary" href="./products/digital-crm.html">Customer Relattionship Management</a>
+                                            <a class="dropdown-item text-primary" href="./products/digital-crm.html">Customer Relationship Management</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-realestate.html">Real Estate Management</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-procurement.html">Procurement</a>
                                             <a class="dropdown-item text-primary" href="./products/digital-customdev.html">Custom Development</a>
@@ -120,7 +120,7 @@
                                         <li class="dropdown-submenu">
                                             <a class="dropdown-item text-primary" href="./products/consulting-governance.html">Governance, Risk & Compliance</a>
                                             <a class="dropdown-item text-primary" href="./products/consulting-strategy.html">Strategy</a>
-                                            <a class="dropdown-item text-primary" href="./products/consulting-iot.html">Internet of Things Consulting</a>
+                                            <a class="dropdown-item text-primary" href="./products/consulting-iot.html">Internet of Things</a>
                                             <a class="dropdown-item text-primary" href="./products/consulting-bigdata.html">Big Data & Analytics</a>
                                             <a class="dropdown-item text-primary" href="./products/consulting-program.html">Program Management</a>
                                             <a class="dropdown-item text-primary" href="./products/consulting-ai.html">Artificial Intelligence</a>
@@ -156,7 +156,8 @@
                                 <div class="single-slide mb-5 pb-5">
                                     <!-- short text heading -->
                                     <h1 class="mb-5 mt-0 pb-5" data-aos="fade-right" data-aos-delay="200">
-                                        Vecancies
+                                        <!-- Vacancies -->
+                                        Careers
                                     </h1>
 
                                     <!-- brief text -->
@@ -233,7 +234,7 @@
                 <img src="./assets/images/CAUTION ICON.png" class="home-service-icon" alt="" class="service-container">
             </div>
     
-            <h5 class=" my-auto">No Vecancies Available At The Moment</h5>
+            <h5 class=" my-auto">No Vacancies Available At The Moment</h5>
         </div>
     </div>
 
